finished test code

--- a/Experiment for HW 4 notebook.ipynb
+++ b/Experiment for HW 4 notebook.ipynb
@@ -43,16 +43,17 @@
     "kappa = 100\n",
     "n = 20\n",
     "d = 5\n",
-    "A = gen.generate_A(n, d)\n",
+    "iters = 100\n",
+    "loss_seq = gen.generate_ls_seq(n, d, gen.xstar2(d), iters)\n",
     "alpha = 0.9\n",
+    "delta = np.log(iters)/iters\n",
+    "xi = delta/1.0\n",
     "sigma0 = 1\n",
     "sigma1 = 0.1\n",
     "sigma2 = 2.0\n",
     "\n",
-    "tracking_errs0 = opt.gradient_descent_experiment(A, alpha, n, d, sigma0, iters=50, projected=False)\n",
-    "tracking_errs1 = opt.gradient_descent_experiment(A, alpha, n, d, sigma1, iters=50, projected=False)\n",
-    "tracking_errs2 = opt.gradient_descent_experiment(A, alpha, n, d, sigma2, iters=50, projected=False)\n",
-    "tracking_errs_proj = opt.gradient_descent_experiment(A, alpha, n, d, sigma0, iters=50, projected=True)"
+    "tracking_errs0, regs0 = opt.gradient_descent(loss_seq, opt.project_ball, alpha)\n",
+    "tracking_errs1, regs1 = opt.bandit_descent(loss_seq, opt.project_ball, alpha, delta, xi)\n"
    ]
   },
   {
@@ -240,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
