--- a/writeup/prelims.tex
+++ b/writeup/prelims.tex
@@ -6,7 +6,7 @@ First we formally introduce the problem. Our objective is:
 
 $$\min_{x_t \in \mathcal{K}} \ell_t(x_t)$$
 
-over rounds $t=1,...T$. Where $\K \subset \mathbb{R}^d$ is our action set and $\ell_t$ are adversarially chosen time varying loss functions. The key in our setting is that we do not have first order gradient information $\glt$ but we are able to get zeroth-order (Bandit) feedback with $k=d+1$ points. First we outline our assumptions. 
+over rounds $t=1,...T$. Where $\K \subset \mathbb{R}^d$ is our action set and $\ell_t$ are adversarially chosen time varying loss functions. The key in our setting is that we do not have first order gradient information $\glt$ but we are able to get zeroth-order (bandit) feedback with $k=d+1$ points. First we outline our assumptions. 
 
 We assume that $\K$ is compact and has a nonempty interior (otherwise project $\K$ to a lower dimensional space). For this work, when we implicitly or explicitly refer to norms, we will be using the euclidean norm. We also have the following assumptions for each loss function $\lt$:
 
@@ -18,6 +18,8 @@ We assume that $\K$ is compact and has a nonempty interior (otherwise project $\
 \begin{assumption}
 	The gradient of $\ell_t$ over $\K$ is bounded:
 	$$\norm{\nabla \ell_t(x)} \leq G ~~ \forall t, \forall x \in \K$$ 
+	
+	Equivalently, $\ell_t$ is $G$-Lipschitz
 \end{assumption}
 
 \begin{assumption}
