almost done with theory

--- a/writeup/dplusone.tex
+++ b/writeup/dplusone.tex
@@ -14,6 +14,9 @@ Where $e_i$'s are the standard unit basis vectors. We further need only the assu
 	&= dG.
 \end{align*}
 
+Where the second inequality is by the Lipschitz property.
+
+\dk{todo}
 And also the divergence of the estimator and the true gradient
 \begin{align*}
 \norm{\tildegt - \glt(x_t)} &= \sqrt{\frac{1}{\delta} \sum_{i=1}^{d} |(\lt(x_t + \delta e_i)-\lt(x_t))e_i - \langle \glt(x_t), e_i \rangle|^2} \\
