--- a/writeup/main.tex
+++ b/writeup/main.tex
@@ -92,7 +92,7 @@
 \newcommand{\dk}[1]{\textcolor{red}{[DK: #1]}}
 \begin{document}
 
-\title{Regret Bounds for Online Gradient Descent with $d+1$ point Bandit Feedback}
+\title{Dynamic Regret Bounds for Online Gradient Descent with $d+1$ point Bandit Feedback}
  \author{Dhamma Kimpara}
 
 \maketitle
@@ -102,6 +102,7 @@
 \input{prelims.tex}
 \input{theory.tex}
 \input{dplusone.tex}
+\input{experiment.tex}
 \newpage
 
 \bibliographystyle{plainnat}
