--- a/writeup/prelims.tex
+++ b/writeup/prelims.tex
@@ -27,10 +27,12 @@ We assume that $\K$ is compact and has a nonempty interior (otherwise project $\
 
 
 \begin{assumption}
-	The gradient of $\ell_t$ over $\K$ is bounded:
+	$\lt$ is G-Lipschitz:
+	\[\norm{\lt(x)-\lt(y)} \leq G \norm{x-y}, ~~ \forall x,y \in \K\].
+	
+	Hence the gradient of $\ell_t$ over $\K$ is bounded:
 	\[\norm{\nabla \ell_t(x)} \leq G ~~ \forall t, \forall x \in \K\]
 	
-	Equivalently, $\ell_t$ is $G$-Lipschitz
 \end{assumption}
 
 
