--- a/writeup/intro.tex
+++ b/writeup/intro.tex
@@ -20,7 +20,7 @@ For this $k$-point feedback setting, we define the expected regret:
 	where the expectation is taken over the randomness of the player.
 \end{defn}
 
-As is typical in Bandit OCO, the algorithm relies on Online Gradient Descent (OGD) which uses a gradient estimator $\tildegt$. Thus the regret bounds are based on the regret bounds of OGD. Here we draw extensively from \citet{agarwal2010optimal} which studies our problem but with static regret and \citet{mokhtari2016online} that gives dynamic regret bounds for OGD.
+As is typical in Bandit OCO, the algorithm relies on Online Gradient Descent (OGD) which uses a gradient estimator $\tildegt$. Thus the regret bounds are based on the regret bounds of OGD. Here we draw extensively from \citet{agarwal2010optimal} which studies our problem but with static regret and \citet{mokhtari2016online} that gives dynamic regret bounds for OGD. To our knowledge our problem has not been studied before.
 
 
 
