--- a/writeup/main.tex
+++ b/writeup/main.tex
@@ -92,7 +92,7 @@
 \newcommand{\dk}[1]{\textcolor{red}{[DK: #1]}}
 \begin{document}
 
-\title{Dynamic Regret Bounds for Online Gradient Descent with $d+1$ point Bandit Feedback}
+\title{Between Bandit and Full-Information: Regret bounds for Online Gradient Descent}
  \author{Dhamma Kimpara}
 
 \maketitle
