--- a/writeup/appendix.tex
+++ b/writeup/appendix.tex
@@ -1,5 +1,8 @@
 \section{Code}
-\subsection{Algorithm}
-
-\subsection{Data Collection}
+\subsection*{generator.py}
+\lstinputlisting[language=Python]{generator.py}
+\subsection*{optimizer.py}
+\lstinputlisting[language=Python]{optimizer.py}
+\subsection*{Experiment runner}
+\lstinputlisting[language=Python]{Experiment-Bandit.py}
 
